--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
+    "next-absolute-url": "^1.2.2",
     "next-cloudinary": "^5.6.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
